# dataraum-context

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  LICENSE  PHASE1_COMPLETE.md  PLAN_CROSS_TABLE_CORRELATION.md  PROFILING_REALITY_CHECK.md  PROFILING_STREAMLINING_PLAN.md  PROFILING_STREAMLINING_PLAN_V2.md  README.md  docker-compose.yml  entropy-framework-future-considerations.md  entropy-management-framework.md  pyproject.toml  server.json  test_graph_agent.py  todos.txt  vulture_whitelist.py  zensical.toml
.claude/: dat-321-lane-state.md  handoff.md  platform-status.md  settings.json
.claude/agents/: senior-code-reviewer.md  spec-compliance-reviewer.md  strict-reviewer.md
.claude/hooks/: end-of-turn-check.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  compose-smoke.yml  docs.yml  release.yml
.plan/: architecture-review.md  context-architecture-revised.md  phase-1-complete.md  phase-7-complete-context-assembly.md  phase_2a_implementation_summary.md  phase_2a_llm_infrastructure.md  phase_3_enrichment.md  profiling-enhancements.md
config/: llm.yaml  null_values.yaml  pipeline.yaml  semantic_overrides.yaml
config/calculation_graphs/: cash_runway_graph.yaml  dso_calculation_graph.yaml  ocf_calculation_graph.yaml
config/cycles/: cycle_vocabulary.yaml
config/domains/: financial.yaml
config/entropy/: contracts.yaml  fixes.yaml  network.yaml  thresholds.yaml
config/filtering/: default.yaml
config/filters/: consistency.yaml  role_based.yaml
config/formatter_thresholds/: defaults.yaml  financial.yaml
config/llm/: config.yaml
config/ontologies/: financial_reporting.yaml
config/patterns/: default.yaml
config/phases/: business_cycles.yaml  column_eligibility.yaml  cross_table_quality.yaml  entropy_interpretation.yaml  graph_execution.yaml  import.yaml  quality_summary.yaml  relationships.yaml  semantic.yaml  slicing.yaml  statistics.yaml  temporal.yaml  temporal_slice_analysis.yaml  typing.yaml  validation.yaml
config/prompts/: context_summary.yaml  dimensional_summary.yaml  entropy_interpretation.yaml  entropy_query_interpretation.yaml  filter_recommendations.yaml  filtering_analysis.yaml  graph_sql_generation.yaml  quality_analysis.yaml  quality_rules.yaml  quality_summary.yaml  quality_summary_batch.yaml  schema_mapping.yaml  semantic_analysis.yaml  slicing_analysis.yaml  suggested_queries.yaml  validation_sql.yaml
config/rules/: default.yaml
config/system/: correlations.yaml  llm.yaml  pipeline.yaml  relationships.yaml  temporal_slicing.yaml  typing.yaml
data/: test.sqlite
docker/: control-plane.Dockerfile
docker/postgres-init/: init-databases.sh
docs/: ARCHITECTURE.md  BACKLOG.md  BUSINESS_CYCLE_DESIGN.md  CALCULATION_ENGINE_DESIGN.md  CLEANUP_AND_CONSOLIDATION_PLAN.md  CLI.md  CONCURRENCY.md  CONFIGURABILITY.md  CYCLES_AGENT_STATUS.md  CYCLES_ANOMALY_DESIGN.md  CYCLE_DETECTION_CONSOLIDATION_PLAN.md  DATA_MODEL.md  ENTROPY_CONTRACTS.md  ENTROPY_IMPLEMENTATION_PLAN.md  ENTROPY_QUERY_BEHAVIOR.md  FILTERING_REDESIGN.md  FORMATTER_ARCHITECTURE_PLAN.md  GRAPH_BACKLOG.md  INTERFACES.md  MCP_SETUP.md  METRICS_ANALYSIS.md  METRICS_BACKLOG.md  MODEL_ARCHITECTURE_REPORT.md  MULTI_TABLE_BUSINESS_CYCLE_ANALYSIS_PLAN.md  NEXT_PHASE_EVALUATION.md  PHASE_IMPLEMENTATION_PLAN.md  PLAN_RELATIONSHIPS_REFACTOR.md  PROGRESS.md  REFERENCE.md  RESTRUCTURING_PLAN.md  STABILIZATION_ASSESSMENT.md  TOPOLOGY_CONCEPT.md  TOPOLOGY_INTEGRATION_SUMMARY.md  architecture.md  bayesian-entropy-network.md  cli.md  configuration.md  contributing.md  data-model.md  dataraum-plugin-roadmap.md  (+7 more)
docs/archive/: CURRENT_STATE.md  ENTROPY_MODELS.md  GRAPH_BACKLOG.md  ORCHESTRATOR_PLAN.md  PHASE_IMPLEMENTATION_PLAN.md  PHASE_OPTIMIZATION_PLAN.md  PROGRAM_ARCHITECTURE_PLAN.md  QUALITY_METRICS_REVISED.md  RESTRUCTURING_PLAN.md  STAGING_DESIGN.md  TOPOLOGY_CONCEPT.md  TOPOLOGY_INTEGRATION_SUMMARY.md  UNIFIED_GRAPH_SCHEMA.md  composite-keys-design.md  entropy-framework-cleanup.md  entropy_action_taxonomy.md
docs/internals/: cycles.md  llm.md  quality-summary.md  statistics.md  temporal-slicing.md  typing.md  validation.md
docs/plans/: agent-refactoring-plan.md  cli-tui-plan.md  entropy-framework-cleanup.md  entropy-phase-f-implementation.md  information-architecture.md  interface-strategy.md  query-agent-architecture.md  query-graph-unification.md  restructuring-plan.md  testdata-and-calibration-roadmap.md  ui-api-consolidation.md  ux-strategy.md
docs/projects/: fixes.md  incremental-imports.md  onboarding-tools-spec.md  onboarding.md  progressive-delivery.md  quality-ui.md  release.md
docs/specs/: entropy.md  (+17 more)
docs_new/: architecture.md  cli.md  configuration.md  entropy.md  pipeline.md
docs_spike/: dat-177-hypothesize-findings.md
examples/: data  e2e_financial_quality.py  old_rules.py
future/: architecture.md
prototypes/: analytics-agents-ts  calculation-graphs  pattern_detection  topology  website-specs
scripts/: check_doc_counts.py  export_openapi.py  infra.py  run_graph_agent.py  run_phase10_multi_table_financial.py  run_phase10_topology.py  run_phase11_business_cycles.py  run_phase12_validation.py  run_phase1_import.py  run_phase2_typing.py  run_phase3_statistics.py  run_phase3b_statistical_quality.py  run_phase4_relationships.py  run_phase4b_correlations.py  run_phase5_semantic.py  run_phase6_correlation.py  run_phase7_slicing.py  run_phase7_temporal.py  run_phase8_slice_analysis.py  run_phase9_financial_domain.py  run_phase9_quality_summary.py  run_staging_profiling.py  run_subsets_pipeline.py  test_cross_table_quality.py  test_financial_domain.py  test_infra.py  test_phase1_csv_import.py  test_phase2_typing.py  test_phase3_statistics.py  test_phase4_correlation.py  test_phase5_semantic.py  test_phase6_relationships.py  tui_audit.py  verify_network.py
tests/: __init__.py  conftest.py  test_correlation.py  test_duckdb_cursor_threading.py  test_financial_quality.py  test_sync_threading_poc.py  test_temporal_quality.py  test_topological_quality.py
(+1111 files in other folders)
