[project]
name = "dataraum-context"
version = "0.1.0"
description = "Rich metadata context engine for AI-driven data analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "DataRaum", email = "hello@dataraum.com" }
]
keywords = ["data", "metadata", "context", "ai", "analytics", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Data processing
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "pint>=0.23",

    # Database (SQLAlchemy + SQLite backend)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Dataflow orchestration
    "sf-hamilton>=1.82.0",

    # MCP
    "mcp>=0.1.0",

    # Configuration
    "pyyaml>=6.0.0",

    # Utilities
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# LLM providers (install what you need)
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
postgres = ["asyncpg>=0.29.0"]

# Synthetic data generation for privacy (SDV)
privacy = ["sdv>=1.17.0"]

# All optional features
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "sdv>=1.17.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
dataraum-context = "dataraum_context.cli:app"

[project.urls]
Homepage = "https://github.com/dataraum/dataraum-context"
Documentation = "https://docs.dataraum.com/context"
Repository = "https://github.com/dataraum/dataraum-context"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataraum_context"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["dataraum_context"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "mcp.*",
    "anthropic.*",
    "openai.*",
    "sdv.*",
    "hamilton.*",
]
ignore_missing_imports = true
